# 360Degree_Head_Movement_Dataset

./: CMakeLists.txt  FindEigen3.cmake  FindFFMPEG.cmake  README.md  README.rst  config.ini
LibAvWrapper/: CMakeLists.txt
LibAvWrapper/inc/: VideoReader.hpp
LibAvWrapper/src/: VideoReader.cpp
PythonInterface/: .gitignore  ExportResults.py  PostProcessing.py  README.md  TestManager.py  config.ini
PythonInterface/GUIHelpers/: DeleteTestFrame.py  ExitManager.py  HomeFrame.py  TestConfigurationFrame.py  TestSessionFrame.py  UserSelectionFrame.py  VerticalScrolledFrame.py  __init__.py
PythonInterface/Helpers/: CMakeLists.txt  CQuaternion.cpp  FFmpeg.py  IniConfParser.py  Quaternion.py  Statistics.py  TestManager.py  User.py  UserManager.py  Video.py  VideoManager.py  __init__.py
src/: ConfigParser.cpp  Log.hpp  LogWriter.hpp  Mesh.hpp  MeshCube.cpp  MeshCube.hpp  MeshCubeEquiUV.cpp  MeshEqualarea.cpp  MeshEqualarea.hpp  MeshEquiAngularCube.cpp  MeshEquiAngularCube.hpp  MeshSegmentedSphere.cpp  MeshSegmentedSphere.hpp  PublisherLogMQ.hpp  Quaternion.hpp  RenderManagerOpenGLHighPolyTest.cpp
